# webots_ros2_conveyor

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
launch/: robot_launch.py
protos/: ConveyorBelt.proto
resource/: cambot_1.urdf  cambot_2.urdf  cambot_3.urdf  conveyor_1.urdf  conveyor_2.urdf  conveyor_3.urdf
webots_ros2_conveyor/: camera_driver.py  conveyor_belt_driver.py  object_recognition_controller.py
worlds/: ure.wbt
